<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/l0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wwidget"
    android:padding="@dimen/widget_margin">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/l10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="2dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:visibility="visible"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/imageView"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/refreshTime"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l10"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/l4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/l5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-1dp"
                    android:layout_marginEnd="-1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/temp_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/inTemp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="-1dp"
                    android:layout_marginEnd="-1dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hum_text"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/inHum"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/inside_text"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:background="@drawable/rounded"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/l8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.39"
                    android:text="@string/temp_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/outTemp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/outside_text"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="2.39"
            android:text="@string/pres_text"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/pres"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_weight="2.39"
            android:textAlignment="textStart"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>


</RelativeLayout>